--- a/inductive-python/00_jupyter.ipynb
+++ b/inductive-python/00_jupyter.ipynb
@@ -2,23 +2,48 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Jupyter Notebooks\n",
     "\n",
-    "Jupyter notebooks are a way to program interactively, incorporating text, links, math, and graphics straight into the notebook.  The gold standard for a notebook is that anyone could download your notebook off the internet and run it to reproduce an analysis you report in a publication.  \n",
-    "\n",
+    "Jupyter notebooks are a way to program interactively, incorporating text, links, math, and graphics straight into the notebook.  The gold standard for a notebook is that anyone could download your notebook off the internet and run it to reproduce an analysis you report in a publication.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Jupyter notebooks are built from \"cells.\"  There are two basic types of cells in jupyter.  **Markdown** cells (like this one) that can hold text and **code** cells (like the next one) that hold code.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a code cell\n",
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"This is a code cell\")\n",
     "print(5*5)"
@@ -26,7 +51,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Interacting with Cells\n",
     " * To edit a **code** cell, just click on it. \n",
@@ -42,7 +71,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#  Code cells\n",
     "Each code cell contains python code.  It can be run indepedently of others.  To run it, click on the cell and hit `Shift+Enter`.  To run all of the cells in order, go to the menu and select `Cell->Run All`.  \n",
@@ -59,9 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -70,20 +106,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -92,7 +142,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Sometimes bad things happen\n",
     "+ If your code is frozen, you can go to `Kernel->Interrupt`.  \n",
@@ -107,7 +161,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -118,7 +175,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -149,7 +209,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Markdown cells\n",
     "\n",
@@ -216,6 +280,15 @@
     "\n",
     " \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
