--- a/inductive-python/02_conditionals.ipynb
+++ b/inductive-python/02_conditionals.ipynb
@@ -5,16 +5,15 @@
    "metadata": {},
    "source": [
     "# Conditional Execution\n",
-    "Conditional execution allows a program to only exceute code if some condition is met.  We'll explore this inductively."
+    "Conditional execution allows a program to only execute code if some condition is met. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What do you think the following code will print out?\n",
-    "\n",
-    "Run it and test your prediction."
+    "#### Predict\n",
+    "What will this code do?"
    ]
   },
   {
@@ -42,9 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What about the following?\n",
-    "\n",
-    "Run it and test your prediction."
+    "#### Predict\n",
+    "What will this code do?"
    ]
   },
   {
@@ -52,7 +50,7 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -72,23 +70,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What does the `x < y` do?  What does it spit out?"
+    "#### Summarize\n",
+    "What does `x < y` do?  What does it spit out?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "#### Modify\n",
+    "Change the following cell so it prints `False`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 20\n",
+    "print (x > 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What do you think the following code will do?\n",
+    "-----------------------------------------------------------------\n",
     "\n",
-    "Run it and test your prediction."
+    "#### Predict\n",
+    "What will this code do?"
    ]
   },
   {
@@ -109,23 +122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Did it behave like you expected?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What about the following code cell?\n",
-    "\n",
-    "Run it and test your prediction."
+    "#### Predict\n",
+    "What will this code do?"
    ]
   },
   {
@@ -146,21 +144,298 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Did it behave like you expected?"
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "if x > 2:\n",
+    "    print(x)\n",
+    "print(\"hello\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "#### Summarize\n",
+    "How does the `if` statement work?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"blue\">Explanation</font>\n",
+    "#### Modify\n",
+    "Change the code above so it prints out `x`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 20\n",
+    "if x < 5:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implement\n",
+    "Write code that will only print `x` if x is more than 100."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More complicated conditionals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 2\n",
+    "if x < 5 and x > 10:\n",
+    "    print(\"condition 1\")\n",
+    "    \n",
+    "x = 7\n",
+    "if x < 5 and x > 10:\n",
+    "    print(\"condition 2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 2\n",
+    "if x < 5 or x > 10:\n",
+    "    print(\"condition 1\")\n",
+    "    \n",
+    "x = 7\n",
+    "if x < 5 or x > 10:\n",
+    "    print(\"condition 2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summarize\n",
+    "How do `and` and `or` work?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modify\n",
+    "Change the following code so it will print \"HERE\" if x is between 17 and 22."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 20\n",
+    "if x < 5 or x > 10:\n",
+    "    print(\"HERE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implement\n",
+    "Write a conditional statement that prints x if it is negative or positive and greater than 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple conditions\n",
+    "\n",
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside conditional\n",
+      "also inside conditional\n",
+      "not inside conditional\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "\n",
+    "if x > 2:\n",
+    "    print(\"inside conditional\")\n",
+    "    print(\"also inside conditional\")\n",
+    "\n",
+    "if x < 2:\n",
+    "    print(\"inside a different conditional\")\n",
+    "    \n",
+    "print(\"not inside conditional\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python decides what is inside the conditional `if` using indentation.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict what will happen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside conditional\n",
+      "also inside conditional\n",
+      "not inside conditional\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "if x < 10:\n",
+    "    x = x + 10\n",
+    "    \n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Did it behave as expected?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now, modify the code so the conditional is `False`.  What will the code spit out now?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if x > 10:\n",
+    "    print(\"condition 1\")\n",
+    "elif x < 0:\n",
+    "    print(\"condition 2\")\n",
+    "else:\n",
+    "    print(\"condition 3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explanation\n",
     "\n",
     "In python the:\n",
     "\n",
@@ -177,7 +452,8 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -214,24 +490,46 @@
     " + `x == y` (is equal to)\n",
     " + `x != y` (is not equal to)\n",
     " \n",
-    "There are more, depending on the sorts of comparisons being made.  We'll get to them later.\n",
-    " \n",
-    "### Predict what the following program will print."
+    "There are more, depending on the sorts of comparisons being made.  We'll get to them later."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "# Explanation\n",
+    "\n",
+    "In python the:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "if CONDITION:\n",
+    "    DO_SOMETHING\n",
+    "elif SOME_OTHER_CONDITION:\n",
+    "    DO_SOMETHING_ELSE\n",
+    "elif YET_ANOTHER_CONDITION:\n",
+    "    DO_YET_ANOTHER_THING\n",
+    "else:\n",
+    "    DO_WHATEVER_WE_WANT \n",
+    "```\n",
+    "\n",
+    "construct will only `DO_SOMETHING` if `CONDITION` is `True`.  The following code will all print \"HERE\"  because the `CONDITION` bit of the `if` statement is `True` in all three cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -239,7 +537,7 @@
      "output_type": "stream",
      "text": [
       "Conditional 2\n",
-      "Conditional 2\n"
+      "Conditional 3\n"
      ]
     }
    ],
@@ -255,87 +553,6 @@
     "if x != 5:\n",
     "    print(\"Conditional 3\")\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Were you right?  If not, where did you go wrong?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python decides what is inside the `if` condition using indentation.  \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inside conditional\n",
-      "also inside conditional\n",
-      "not inside conditional\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5\n",
-    "\n",
-    "if x > 2:\n",
-    "    print(\"inside conditional\")\n",
-    "    print(\"also inside conditional\")\n",
-    "    \n",
-    "    x = x + 5\n",
-    "    \n",
-    "print(\"not inside conditional\")\n",
-    "x = x - 7\n",
-    "\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now, modify the code so the conditional is `False`.  What will the code spit out now?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "if x > 10:\n",
-    "    print(\"condition 1\")\n",
-    "elif x < 0:\n",
-    "    print(\"condition 2\")\n",
-    "elif x \n",
-    "else:\n",
-    "    print(\"\")"
    ]
   }
  ],
