--- a/practicum/02_puzzles/Puzzles.ipynb
+++ b/practicum/02_puzzles/Puzzles.ipynb
@@ -4,73 +4,292 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem \n",
-    "\n",
-    "Find out whether a list is a palindrome.\n",
-    "A palindrome can be read forward or backward; e.g. [x,a,m,a,x].\n",
-    "\n",
-    "Source: [prolog](https://sites.google.com/site/prologsite/prolog-problems/)"
+    "# PART I"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem\n",
+    "## Simple functions\n",
     "\n",
-    "Duplicate the elements of a list a given number of times.\n",
+    "+ Write a function called `palindrome` that will take any list and decide whether or not is a palindrome. (A palindrome is something that is the same read forwards or backwards like \"RACECAR\").  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def palindrome(some_string):\n",
     "\n",
-    "?- dupli([a,b,c],3,X).\n",
-    "X = [a,a,a,b,b,b,c,c,c]\n",
+    "    some_list = list(some_string)\n",
+    "    list_reversed = some_list[:]\n",
+    "    list_reversed.reverse()\n",
+    "    \n",
+    "    for i in range(len(some_list)):\n",
+    "        if some_list[i] != list_reversed[i]:\n",
+    "            return False\n",
+    "        \n",
+    "    return True\n",
     "\n",
-    "Source: [prolog](https://sites.google.com/site/prologsite/prolog-problems/)"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert palindrome(\"RACECAR\") == True\n",
+    "assert palindrome(\"TEST\") == False"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem\n",
-    "\n",
-    "Determine whether a given integer number is prime. (Hint: you might want to use the [modulo operator](http://stackoverflow.com/questions/4432208/how-does-work-in-python))"
+    "+ Write a function called `prime` that determines whether an integer number is prime. (Hint: you might want to use the [modulo operator](http://stackoverflow.com/questions/4432208/how-does-work-in-python))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def prime(num):\n",
+    "    \n",
+    "    for i in range(num-1,1,-1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "        \n",
+    "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert prime(20) == False\n",
+    "assert prime(42979) == True"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem\n",
-    "\n",
-    "Given a list of integer numbers, find a correct way of inserting arithmetic signs (operators) such that the result is a correct equation. \n",
-    "\n",
-    "Example: With the list of numbers [2,3,5,7,11] we can form the equations 2-3+5+7 = 11 or 2 = (3*5+7)/11 (and ten others!).\n",
-    "\n",
-    "Source: [prolog](https://sites.google.com/site/prologsite/prolog-problems/)"
+    " + Write a function called `reverse_complement` that returns the reverse complement of any DNA sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def reverse_complement(sequence):\n",
+    "    \n",
+    "    conversion_dict = {\"A\":\"T\",\n",
+    "                       \"T\":\"A\",\n",
+    "                       \"G\":\"C\",\n",
+    "                       \"C\":\"G\"}\n",
+    "    \n",
+    "    out_seq = []\n",
+    "    for s in sequence:\n",
+    "        out_seq.append(conversion_dict[s])\n",
+    "        \n",
+    "    out_seq.reverse()\n",
+    "    \n",
+    "    return \"\".join(out_seq)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert reverse_complement(\"ATG\") == \"CAT\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem \n",
+    "## Deadly Board Game\n",
     "\n",
-    "You place 100 coins heads up in a row and number them by position, with the coin all the way on the left No. 1 and the one on the rightmost edge No. 100. Next, for every number N, from 1 to 100, you flip over every coin whose position is a multiple of N. For example, first you’ll flip over all the coins, because every number is a multiple of 1. Then you’ll flip over all the even-numbered coins, because they’re multiples of 2. Then you’ll flip coins No. 3, 6, 9, 12 … And so on.\n",
+    "While traveling in the Kingdom of Arbitraria, you are accused of a heinous crime. Arbitraria decides who’s guilty or innocent not through a court system, but a board game. It’s played on a simple board: a track with sequential spaces numbered from 0 to 1,000. The zero space is marked “start,” and your token is placed on it. You are handed a fair six-sided die and three coins. You are allowed to place the coins on three different (nonzero) spaces. Once placed, the coins may not be moved.\n",
     "\n",
-    "What do the coins look like when you’re done? Specifically, which coins are heads down?\n",
+    "After placing the three coins, you roll the die and move your token forward the appropriate number of spaces. If, after moving the token, it lands on a space with a coin on it, you are freed. If not, you roll again and continue moving forward. If your token passes all three coins without landing on one, you are executed. On which three spaces should you place the coins to maximize your chances of survival?\n",
     "\n",
     "Source: [fivethirtyeight](https://fivethirtyeight.com/features/can-you-survive-this-deadly-board-game/)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "coin_placement = [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert len(coin_placement) == 3\n",
+    "assert len(list(dict([(p,[]) for p in coin_placement]).keys())) == 3\n",
+    "assert max(coin_placement) <= 99\n",
+    "assert min(coin_placement) >= 0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem\n",
+    "## Battle Royale\n",
     "\n",
-    "You are studying a strain of bacteria that double every 30 minutes under your experimental conditions. \n",
-    "    \n",
-    "        "
+    "In a distant, war-torn land, there are 10 castles. There are two warlords: you and your archenemy. Each castle has its own strategic value for a would-be conqueror. Specifically, the castles are worth 1, 2, 3, …, 9, and 10 victory points. You and your enemy each have 100 soldiers to distribute, any way you like, to fight at any of the 10 castles. Whoever sends more soldiers to a given castle conquers that castle and wins its victory points. If you each send the same number of troops, you split the points. You don’t know what distribution of forces your enemy has chosen until the battles begin. Whoever wins the most points wins the war.\n",
+    "\n",
+    "Submit a plan distributing your 100 soldiers among the 10 castles as a python list. Once I receive all your battle plans, I’ll adjudicate all the possible one-on-one matchups. Whoever wins the most wars wins the battle royale and is crowned king or queen of, er, something.\n",
+    "\n",
+    "Source: [fivethirtyeight](https://fivethirtyeight.com/features/can-you-rule-riddler-nation/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PART II\n",
+    "\n",
+    "### Goals\n",
+    "\n",
+    "#### Conceptual\n",
+    " + Understand how docs are built in python for figuring out how functions and other programing elements \"on-the-fly.\"\n",
+    " + Learn that it's okay to mess around to figure out a program.\n",
+    "\n",
+    "#### Skill\n",
+    " + Be able to figure out the parts of a library you need to be successful given that library and its documentation.\n",
+    " + Learn how to land a rocket in an emergency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rocket Landing\n",
+    "\n",
+    "You are in a rocket falling from 1000 m above the surface of an alien world.  You need to program the computer to fire the thrusters to land safely. Fortunately the rocket is controlled by python.  Unfortunately, you don't have a software manual. You'll have to figure out how to land the rocket given only the code itself. \n",
+    "\n",
+    "### Objective\n",
+    "\n",
+    "Modify the code below so the rocket lands safely.  We'll test your approach using a fresh version of `rocket.Rocket`, so no [hacking the rocket to win](https://en.wikipedia.org/wiki/Kobayashi_Maru).  \n",
+    "\n",
+    "### Hints\n",
+    "\n",
+    "#### API:\n",
+    " + Tab-complete and `help()` are your friends\n",
+    " + Feel free to mess around and explore the code\n",
+    "\n",
+    "#### Rocket:\n",
+    " + Graphs will help a lot\n",
+    " + Use different thrust levels for different altitudes\n",
+    " + Make the amount of thrust depend on the velocity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRASHED: Your party contracts typhoid.  You are all dead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import rocket\n",
+    "\n",
+    "R = rocket.Rocket()\n",
+    "while R.alive and not R.landed:\n",
+    "\n",
+    "    # <- Your code here ->\n",
+    "    \n",
+    "    R.update()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-251-2d354c21cd12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malive\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlanded\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert R.alive and R.landed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
