--- a/inductive-python/01_python-as-a-calculator.ipynb
+++ b/inductive-python/01_python-as-a-calculator.ipynb
@@ -13,14 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "8*8"
    ]
@@ -33,12 +44,12 @@
     }
    },
    "source": [
-    "#### It does order of operations etc, just like a calculator"
+    "#### Predict the following output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false,
@@ -46,10 +57,30 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n",
+      "5.2\n"
+     ]
+    }
+   ],
    "source": [
     "print((5+5)/25)\n",
     "print(5 + 5/25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "python does order of operations, etc. just like a calculator"
    ]
   },
   {
@@ -62,9 +93,56 @@
    "source": [
     "#### Most of the notation is intuitive. \n",
     "\n",
-    "$$ (5 \\times 5 + \\frac{4}{2} - 8)^{2}$$\n",
+    "Write out the following in a cell.  What value to you get?\n",
     "\n",
-    "would be written like follows.  The only weird notation is $x^{2}$ is written `x**2`."
+    "$$ (5 \\times 5 + \\frac{4}{2} - 8)^{2}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "361.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(5*5 + 4/2 - 8)**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Most notation is intuitive.  Only weirdo is that \"raise x to the power of y\" is given by `x**y` rather than `x^y`.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "What is the value of $sin(2)$?"
    ]
   },
   {
@@ -78,7 +156,18 @@
    },
    "outputs": [],
    "source": [
-    "(5*5 + 4/2 - 8)**2"
+    "sin(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Python gives very informative errors (if you know how to read them).  What do you think `NameError` means?"
    ]
   },
   {
@@ -89,7 +178,36 @@
     }
    },
    "source": [
-    "#### To get access to more math, you need to `import math`.  "
+    "To get access to more math, you need \n",
+    "\n",
+    "`import math`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "math.sin(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Once you have math imported, you have access to a whole slew of math functions."
    ]
   },
   {
@@ -104,8 +222,6 @@
    },
    "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
     "print(math.factorial(10))\n",
     "print(math.sqrt(10))\n",
     "print(math.sin(math.pi))\n",
@@ -123,11 +239,9 @@
     }
    },
    "source": [
-    "If you want to see what the `math` module has to offer, type `math.` and then hit `TAB`.  This will make a dropdown that shows the possibilities.  \n",
+    "If you want to see what the `math` module has to offer, type `math.` and then hit `TAB`.  \n",
     "\n",
-    "<img src=\"python-as-a-calculator/math-dropdown.png\" />\n",
-    "\n",
-    "You can also get information about a function by typing `help(FUNCTION)`.  If you run the next cell, it will give you information about the `math.factorial` function."
+    "<img src=\"python-as-a-calculator/math-dropdown.png\" />"
    ]
   },
   {
@@ -145,12 +259,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "You can also get information about a function by typing `help(FUNCTION)`.  If you run the next cell, it will give you information about the `math.factorial` function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -167,7 +292,8 @@
    },
    "source": [
     "### Variables\n",
-    "#### You can use variables to store values"
+    "\n",
+    "#### Predict what will happen."
    ]
   },
   {
@@ -181,7 +307,61 @@
    },
    "outputs": [],
    "source": [
-    "x = 5*5\n",
+    "x = 5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict what will happen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "x = x + 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict what will happen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "5*5 = x\n",
     "print(x)"
    ]
   },
@@ -193,31 +373,7 @@
     }
    },
    "source": [
-    "#### But storing stuff only works one way.  Try to run the following cell:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to operator (<ipython-input-1-77e6854e6196>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-77e6854e6196>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    5*5 = x\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
-     ]
-    }
-   ],
-   "source": [
-    "5*5 = x"
+    "What happened?  `SyntaxError` is something python can't interpret."
    ]
   },
   {
@@ -228,7 +384,7 @@
     }
    },
    "source": [
-    "The reason it doesn't work is that the `=` sign means: store the output of the stuff on the **right** in the variable on the **left**.  It's nonsensical to try to store anything in `5*5`, so the command fails."
+    "In python, `=` means store the output of the stuff on the **right** in the variable on the **left**.  It's nonsensical to try to store anything in `5*5`, so the command fails."
    ]
   },
   {
@@ -239,27 +395,19 @@
     }
    },
    "source": [
-    "#### All the stuff on the right is done first, followed by assigning the variable. "
+    "#### Predict what will happen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
     "x = 5*x\n",
@@ -285,13 +433,7 @@
     }
    },
    "source": [
-    "## Try it out\n",
-    "\n",
-    "Stirling's approximation holds that you can approximate $n!$ using some nifty log tricks.  \n",
-    "\n",
-    "$$ ln(n!) \\approx nln(n) - n + 1 $$\n",
-    "\n",
-    "In the cell below, write code  to check this approximation for **any** value of $n$."
+    "#### Predict what will happen. "
    ]
   },
   {
@@ -300,14 +442,25 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n"
+    "this_is_a_variable = 5\n",
+    "another_variable = 2\n",
+    "print(this_is_a_variable*another_variable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Variables can (and **should**) have descriptive names.  "
    ]
   },
   {
@@ -318,8 +471,32 @@
     }
    },
    "source": [
-    "Is Stirling's approximation better for small or large values of $n$?"
+    "### Implement\n",
+    "\n",
+    "Stirling's approximation says that you can approximate $n!$ using some nifty log tricks.  \n",
+    "\n",
+    "$$ ln(n!) \\approx nln(n) - n + 1 $$\n",
+    "\n",
+    "Write code  to check this approximation for **any** value of $n$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82104.40371976183\n",
+      "82108.92783681436\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
