--- a/inductive-python/03_loops.ipynb
+++ b/inductive-python/03_loops.ipynb
@@ -4,7 +4,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loops"
+    "# Loops\n",
+    "Loops let you execute code over and over."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(50):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summarize\n",
+    "\n",
+    "What does the `range` function do? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modify\n",
+    "\n",
+    "Change the cell below so it prints all $i$ between 0 and 200."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(50):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implement \n",
+    "\n",
+    "Write a loop that calculates the sum:\n",
+    "\n",
+    "$$ 1 + 2 + 3 + ... + 1001$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loops with conditionals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    if i > 5:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modify\n",
+    "Change the code below so it goes from 0 to 99 and prints all `i` less than 20. "
    ]
   },
   {
@@ -15,11 +150,205 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "for i in range(10):\n",
-    "    "
+    "    if i > 5:\n",
+    "        print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------\n",
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    if i > 5:\n",
+    "        break\n",
+    "    print(i) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summarize\n",
+    "What does the `break` keyword do?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print(\"HERE\")\n",
+    "    if i > 5:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summarize\n",
+    "What does the `continue` keyword do?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implement\n",
+    "Write a program that starts calculating the sum:\n",
+    "\n",
+    "$$1 + 2 + 3 + ... 100,000$$\n",
+    "\n",
+    "but stops if the sum is greater than 30,000.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### While loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 1\n",
+    "while x < 10:\n",
+    "    print(x)\n",
+    "    x = x + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 1000\n",
+    "while x > 100:\n",
+    "    print(x)\n",
+    "    x = x - 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summarize\n",
+    "How does `while` work?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modify\n",
+    "Change the following code so it will print all values of $x^2$ for $x$ between 5 and 30."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 0\n",
+    "while x > 20:\n",
+    "    print(x*x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implement\n",
+    "Use a `while` loop to determine `sin(x)` for `x` $0$, $\\pi/4$, $\\pi /2$, $3 \\pi /4$... $2 \\pi$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extra Exercises\n",
+    "\n",
+    "+ Write a loop that calculates a Riemann sum for $x^2$ for $x \\in [-5,5]$.\n",
+    "+ Write a loop that prints every 5th number between 1 and 2000."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
