--- a/practicum/02_puzzles/Rocket Landing.ipynb
+++ b/practicum/02_puzzles/Rocket Landing.ipynb
@@ -37,28 +37,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRASHED: Your party contracts typhoid.  You are all dead.\n"
+     ]
+    }
+   ],
    "source": [
     "import rocket\n",
     "\n",
     "R = rocket.Rocket()\n",
-    "while R.alive and not R.landed:    \n",
+    "while R.alive and not R.landed:\n",
+    "\n",
+    "    # Your code here\n",
     "    R.update()\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
