updated pandas dependence in test

--- a/Test notebook.ipynb
+++ b/Test notebook.ipynb
@@ -51,6 +51,11 @@
     "    things_not_installed.append(\"matplotlib\")\n",
     "\n",
     "try:\n",
+    "    import pandas\n",
+    "except ImportError:\n",
+    "    things_not_installed.append(\"pandas\")\n",
+    "    \n",
+    "try:\n",
     "    import sklearn\n",
     "except ImportError:\n",
     "    things_not_installed.append(\"scikit-learn\")\n",
